--- a/HomeWork3/package.json
+++ b/HomeWork3/package.json
@@ -20,7 +20,9 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
